feature: cambio del modelo de la base de datos
