# routers/router.go
@@ -16,15 +16,9 @@ import (
 func init() {
 	ns := beego.NewNamespace("/v1",
 
-		beego.NSNamespace("/preliquidacion",
+		beego.NSNamespace("/contrato_preliquidacion",
 			beego.NSInclude(
-				&controllers.PreliquidacionController{},
-			),
-		),
-
-		beego.NSNamespace("/contrato",
-			beego.NSInclude(
-				&controllers.ContratoController{},
+				&controllers.ContratoPreliquidacionController{},
 			),
 		),
 
@@ -37,6 +31,18 @@ func init() {
 		beego.NSNamespace("/detalle_preliquidacion",
 			beego.NSInclude(
 				&controllers.DetallePreliquidacionController{},
+			),
+		),
+
+		beego.NSNamespace("/preliquidacion",
+			beego.NSInclude(
+				&controllers.PreliquidacionController{},
+			),
+		),
+
+		beego.NSNamespace("/contrato",
+			beego.NSInclude(
+				&controllers.ContratoController{},
 			),
 		),
 	)
